Login Details added to Order Form

--- a/index.html
+++ b/index.html
@@ -72,6 +72,27 @@
                 </li>
             </ul>
         </fieldset>
+        <fieldset>
+            <legend>Login Details</legend>
+            <ul style="list-style-type: none">
+
+                <li>
+                    <label class="required">
+                        <div>Password</div>
+                        <input type="password" name="password" required>
+                    </label>
+                </li>
+<li>
+                    <label class="required">
+                        <div>Confirm Password</div>
+                        <input type="password" name="confirm_password" required>
+                    </label>
+                </li>
+            </ul>
+
+        </fieldset>
+
+
         <div class="buttons">
             <input type="submit" value="submit order">
             <input type="submit" id="saveOrder" value="Save Order">
